<?xml version="1.0"?>
<package format="2">
  <name>donkey_bringup</name>
  <version>0.0.0</version>
  <description>The donkey_bringup package</description>

  <maintainer email="alokejm@gmail.com">AlokeM</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <export>

  </export>
</package>
